--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,py35,{py27,py35}-pyramid15,pep8
+envlist = py27,py33,py34,py35,{py27,py35}-pyramid15,{py27,py35}-pyramid17-webob16,pep8
 
 [testenv]
 deps =
@@ -8,10 +8,10 @@ deps =
     pytest>=3
     ordereddict
     webtest
+    webob16: WebOb<1.7
     pyramid15: pyramid<=1.5.4
+    pyramid17: pyramid<1.8.0
     bravado
-    # Python >= 2.7 is needed by twisted >= 15.5
-    py26: twisted >= 14.0.0, < 15.5
 
 commands =
     coverage run --source=pyramid_swagger/ --omit=pyramid_swagger/__about__.py -m pytest --capture=no --strict {posargs:tests/}
