--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.1
+    rev: v2.2.3
     hooks:
     -   id: check-json
     -   id: check-yaml
@@ -17,7 +17,7 @@ repos:
         - -i
         - --ignore=E309,E501
 -   repo: https://gitlab.com/pycqa/flake8.git
-    rev: 3.7.6
+    rev: 3.7.7  # Keep this version in sync with flake8 in yesqa additional_dependencies
     hooks:
     -   id: flake8
         args:
@@ -30,3 +30,13 @@ repos:
         args:
         - --add-import
         - from __future__ import absolute_import
+-   repo: https://github.com/asottile/add-trailing-comma
+    rev: v1.0.0
+    hooks:
+    -   id: add-trailing-comma
+-   repo: https://github.com/asottile/yesqa
+    rev: v0.0.11
+    hooks:
+    -   id: yesqa
+        additional_dependencies:
+        - flake8==3.7.7  # keep this in sync with flake8 pre-commit version
