Add PEP 561 typing support

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-.cache/
-.idea/
 *pyc
 *swp
-docs/_build
-docs/build
+.cache/
+.coverage
+.idea/
+.mypy_cache/
+.pytest_cache/
+.ropeproject
+.tox
 build/
 dist/
-.coverage
-.tox
-.ropeproject
+docs/_build
+docs/build
 pyramid_swagger.egg-info
 tests/__pycache__
 venv/
-.pytest_cache/
