--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
       env: TOXENV=py27-pyramid15
     - python: "3.6"
       env: TOXENV=docs
+    - env: TOXENV=mypy
+      python: "3.6"
 install: pip install tox coveralls
 script: tox
 after_success: coveralls
