--- a/tox.ini
+++ b/tox.ini
@@ -22,3 +22,10 @@ deps =
 commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
     sphinx-build -W -b linkcheck docs docs/_build/html
+
+[testenv:mypy]
+basepython = python3.6
+deps =
+    mypy
+commands =
+    mypy pyramid_swagger tests
